--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
-html, body { height: 100%; margin: 0; }
+body { 
+    height: 100%; 
+    margin: 0; 
+    background-image: url("https://ak.picdn.net/shutterstock/videos/9101426/thumb/1.jpg")
+}
 h1 , p{
+    margin: 0 auto;
     text-align: center;
 }
 
@@ -19,9 +24,9 @@ h1 , p{
 }
 
 .lyrics {
-    float: left;
     height: 250px;
-    width: 50%;
+    width: 100%;
+    text-align: center;
     background-color: whitesmoke;
     /* font-family: 'Paytone One', sans-serif; */
 }
@@ -41,23 +46,25 @@ h1 , p{
     color: green;
     text-align: center;
 } */
-.options {
-    display: inline-flex;
-    float: right;
-    flex-direction: column;
-    width: 50%;
+.progress {
+    display: flex;
+    flex-direction: row;
+    margin: 0 auto;
+    width: 700px;
+    position: relative;
     border: 1px solid green;
     justify-content: space-between;
-}
-.load{
-    
-}
-#progress{
-    background: blueviolet;
-     height:5px;
 }
 
 .start {
     height: 20px;
-    width: 20px;
+    width: 10%;
+    position: relative;
+}
+
+.timer {
+    width: 90%;
+    position: relative;
+    background-color: cadetblue;
+    direction: ltr;
 }
