When player loses it displays message and changes button to restart

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body { 
     height: 100%; 
-    margin: 0; 
+    margin: 0 auto; 
     background-image: url("https://ak.picdn.net/shutterstock/videos/9101426/thumb/1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
