updated restart button and added audio

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     height: 100%; 
     margin: 0 auto; 
     background-color: lightblue;
-    /* background-image: url("https://ak.picdn.net/shutterstock/videos/9101426/thumb/1.jpg");
+    /* background-image: url("https://i.pinimg.com/564x/1a/ea/0c/1aea0c4208e504b5e1104b939499fe1a.jpg");
     background-repeat: no-repeat;
     background-size: cover; */
 }
