removed event listeners to fix the bug where it kept skipping after using the refresh button

--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@ h1 , p{
     text-align: center;
 }
 
+#level {
+    text-align: center;
+    margin: 0 auto;
+    display: block;
+}
 
 .note{
     width: 50px;
