--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@ body {
     height: 100%; 
     margin: 0 auto; 
     background-color: lightblue;
-    /* background-image: url("https://cdn.imgbin.com/17/2/18/imgbin-orange-star-background-5uaabMYdmkvNExD9cpWiE1iNP.jpg");
+    background-image: url("https://i.pinimg.com/originals/43/ad/31/43ad316fb8212807903fb5616d35f8b3.jpg");
     background-repeat: no-repeat;
-    background-position: center; */
+    background-position: center;
 }
 h1{
     font-size: 45px;
