updated progress bar direction by changing width start from 0 to 90 and working backwords from previous method

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ h1 , p{
     width: 90%;
     position: relative;
     background-color: cadetblue;
-    direction: ltr;
+    direction: rtl;
 }
 
 button {
